Added activity endpoint
