# src/dto/activity.dto.ts
@@ -1,0 +1,5 @@
+import { PathParams } from "./base.dto";
+import { PaginationQuery } from "./pagination.dto";
+
+export type GetUserActivityParams = PathParams<"user_id">;
+export type GetUserActivityQuery = PaginationQuery;
